Fix delivery of synchronized events that come from the GUI thread

Now KisSynchronizedConnection behaves as QT::AutoConnection, that is,
it delivers events right away, if they are emitted from the GUI thread.

It should fix several bugs, when the GUI thread creates temporary
KisDocument objects and unittests.

BUG:445831